style: fix horizontal overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,9 @@ body {
   width: 100vw;
   background-color: #181719;
   color: #fff;
+  overflow-x: hidden;
+  max-width: 2000px;
+  margin: 0em auto;
 }
 
 .page {
@@ -201,7 +204,7 @@ main {
   padding: 1em;
   background-color: #181719;
   border-radius: 5px;
-  box-shadow: 0px 4px 4px 0px #000000 25%;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px 0px;
 }
 .card-author__head {
   display: flex;
