--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -15,4 +15,8 @@ body {
 
 	background-color: #181719;
 	color: #fff;
+
+	overflow-x: hidden;
+	max-width: 2000px;
+	margin: 0em auto;
 } 
