--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -8,6 +8,7 @@
 	flex-direction: column;
 	gap: 3em;
 
+
 }
 
 main {
@@ -194,7 +195,8 @@ main {
 	padding: 1em;
 	background-color: #181719;
 	border-radius: 5px;
-	box-shadow: 0px 4px 4px 0px #000000 25%;
+	//box-shadow: 0px 4px 4px 0px #000000 25%;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px 0px; 
 
 	&__head {
 		display: flex;
